--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 Password encryption (hash/salt)
-Sortering på allthreads (populär / recent DESC ASC)
+Sorting on "allthreads" (popular / recent DESC ASC)
+Better documenting
