--- a/TODO
+++ b/TODO
@@ -1,3 +1,1 @@
-Password encryption (hash/salt)
-Sorting on "allthreads" (popular / recent DESC ASC)
-Better documenting
+Sorting in allthreads (popular / recent DESC ASC)
